--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
+
 body,
 html {
   width: 100%;
   height: 100%; 
+    
 }
+
 
 body {
 font-family: 'Kalam', cursive;
-	color: #FFF7AA;
+
+	
 }
 
 hr {
   max-width: 65px;
   border-width: 3px;
-  border-color: #F05F44; 
+  border-color: #152B55; 
 }
 
 .faded {
-  color: rgba(255, 255, 255, 0.8); 
+  color: rgba(255, 255, 255, 15.5); 
 }
 
 header.startup {
@@ -40,6 +44,7 @@ header.startup h1 {
   text-transform: uppercase;
   border-radius: 300px;
   font-family: 'Kalam', cursive;
+  font-size: 1.2rem;
 }
 
 .btn-xl {
@@ -47,7 +52,7 @@ header.startup h1 {
 }
 
 .btn-primary {
-  background-color: ;
+  background-color: #0067FF;
   border-color: grey; }
 
 .btn-primary:hover {
@@ -57,4 +62,3 @@ header.startup h1 {
   cursor: pointer;
 }
 
-	
